--- a/src/main/res/layout/browsing_list_item.xml
+++ b/src/main/res/layout/browsing_list_item.xml
@@ -27,12 +27,13 @@
 
 	<ImageView
 		android:id="@+id/icon"
-		android:layout_width="wrap_content"
-		android:layout_height="fill_parent"
+		android:layout_width="?android:attr/listPreferredItemHeight"
+		android:layout_height="?android:attr/listPreferredItemHeight"
 		android:layout_alignParentBottom="true"
 		android:layout_alignParentTop="true"
 		android:layout_marginRight="6dip"
 		android:layout_marginEnd="6dip"
+		android:scaleType="centerInside"
 		android:contentDescription="" />
 
 	<TextView
